# GRN-Paper-Code

./: README.md  pyproject.toml  requirements.txt  run_and_test_model.py  run_pipeline.py
configs/: example_project.yaml  gse318326_run.yaml
example_results/: evaluation_summary.json  reconstruction_metrics.csv
scripts/: build_gse223041_metadata_template.py  evaluate_grn_model.py
src/causal_grn/: __init__.py  config.py  gtf_utils.py  io_utils.py  model.py  preprocess.py  pseudotime.py  train.py  trajectory.py
